chore(.vscode/settings.json): Update VS Code settings configuration for python workspace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
      },
      "github.copilot.advanced": {
           "useLanguageServer": false
-     }
+     },
+     "python.analysis.typeCheckingMode": "off"
 }
